kubernetes/apps/kube-system/cilium/app/networks.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: matalos.${SECRET_DOMAIN:=flux.local}
    lbipam.cilium.io/ips: 192.168.10.20
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
